# maemo-xsisusb

./: ChangeLog  configure.ac  libtool  start-xsisusb
GL/apple/: Makefile.in
GL/glx/: Makefile.in
GL/mesa/: Makefile.in
XTrap/: Makefile.in
Xext/: Makefile.in  sync.c  xvmain.c
Xi/: setbmap.c  stubs.c
cfb/: Makefile.in
composite/: compalloc.c  compint.h  compwindow.c
config/: .hal.c.swp  Makefile.am  dbus.c  hal.c
damageext/: Makefile.in
dbe/: Makefile.in
debian/: changelog  control  pointercal-lph8923.default  pointercal-ls041y3-RX-34-B2.default  pointercal-ls041y3-RX-34.default  rules  xsisusb.install
diffs/: kxv-insane-unroll-v2.diff  kxv-insane-unroll.diff  the-great-rename.diff
dix/: devices.c  getevents.c  main.c
fb/: fb.h  fbblt.c  fbcompose.c  fbmmx.c  fbpict.h  fbsolid.c
hw/kdrive/: Makefile.am  Makefile.in
hw/kdrive/omap/: Makefile.am  omap.c  omap.h  omap_plane.c  omap_video.c  omap_video_formats.c  omapinit.c
hw/xgl/: Makefile.in
hw/xprint/: Makefile.in
hw/xwin/: Makefile.in
include/: dix.h  dixstruct.h  input.h  inputstr.h
local-patches/: fb-debugging  meh
mfb/: Makefile.in
mi/: miinitext.c  miregion.c
miext/: Makefile.in
miext/cw/: Makefile.in
miext/damage/: Makefile.in  damage.c
miext/shadow/: Makefile.in
os/: Makefile.in
record/: Makefile.in
trunk/xsisusb/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  dbus-core.c  start-sismirror
trunk/xsisusb/hw/kdrive/sisusb/: Makefile.am  sisusb.c  sisusb.h  sisusb_device.c  sisusbinit.c
xfixes/: Makefile.in
xsp/: spext.h  xspmodule.c
(+240 files in other folders)
